14-cni/cilium/network-policy/xwing-dns-deny-policy.yaml
apiVersion: "cilium.io/v2"  
kind: CiliumNetworkPolicy  
metadata:  
  name: "xwing-dns-deny"  
spec:  
  endpointSelector:  
    matchLabels:  
      class: xwing  
  egressDeny:  
  - toEndpoints:  
    - matchLabels:  
        namespace: kube-system  
        k8s-app: kube-dns
